[gd_scene load_steps=3 format=3 uid="uid://bqmch8xq2h1kp"]

[ext_resource type="Script" uid="uid://krt8hgeuuxmi" path="res://src/ui/widgets/inventory/inventory_row.gd" id="1_x8v9z"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w48eb"]
bg_color = Color(0.449834, 0.667121, 0.405756, 1)

[node name="InventoryRow" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_x8v9z")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ItemInfo" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="MarginContainer/HBoxContainer/ItemInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Item Name"
clip_text = true

[node name="ConditionBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/ItemInfo"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 7.835)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_w48eb")
value = 50.0
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ActionButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Use"

[node name="PriceLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0 gold"
horizontal_alignment = 1
